api-docs/v1/index.rst
.. _index:

=========================================================
Rackspace Cloud DNS API |contract version|
=========================================================

*Last updated:* |today|

This guide is intended to assist software developers who want to develop
applications by using the |product name| service REST application programming
interface (API). It fully documents the |apiservice|, which enables developers
to interact with the components of the service.

To use the information provided here, you should have a general understanding
of the DNS service. You should also be familiar with the following
technologies:

-  *RESTful* web services

-  *HTTP*/1.1

-  JSON data serialization format

.. note::

   See :ref:`DNS propagation <cdns-dg-propagation>` for information about DNS
   propagation.

The following figure shows an overview of |service| infrastructure:

.. figure:: /_images/Cloud_DNS_Infographic-1.png


Use the following links to get user and reference information for using the
|apiservice|.

- :ref:`Getting Started Guide<getting-started-guide>`
- :ref:`General API information <general-api-info>`
- :ref:`API reference <api-reference>`
- :ref:`Release Notes <release-notes-collection>`

The |service| enables developers to view and manage domains, subdomains, and
records through a simple Representational State Transfer (REST) web service
interface.

For more information about the |product name| service, see the
:how-to:`Cloud DNS FAQ <cloud-dns-faq>`.


.. toctree:: :hidden:
   :maxdepth: 2

   Cloud DNS 1.0 <self>
   getting-started/index
   general-api-info/index
   api-reference/index
   release-notes/index
   service-updates
   additional-resources
   copyright
